--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,13 @@
     "keywords": ["fenric", "sunrise", "http-header-kit", "http", "header", "kit", "psr-7"],
     "homepage": "https://github.com/sunrise-php/http-header-kit",
     "license": "MIT",
-    "authors": [{
-        "name": "Anatoly Fenric",
-        "email": "anatoly@fenric.ru",
-        "homepage": "https://anatoly.fenric.ru/"
-    }],
+    "authors": [
+        {
+            "name": "Anatoly Fenric",
+            "email": "anatoly@fenric.ru",
+            "homepage": "https://anatoly.fenric.ru/"
+        }
+    ],
     "require": {
         "php": "^7.1",
         "psr/http-message": "^1.0",
