--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": "^7.1",
         "psr/http-message": "^1.0",
-        "sunrise/http-header": "^1.0"
+        "sunrise/http-header": "^1.0",
+        "sunrise/http-header-collection": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "7.5.6",
