--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,19 @@
 {
     "name": "sunrise/http-header-kit",
-    "description": "Sunrise HTTP Header Kit for PHP 7.1+ based on PSR-7",
-    "keywords": ["fenric", "sunrise", "http-header-kit", "http", "header", "kit", "psr-7"],
     "homepage": "https://github.com/sunrise-php/http-header-kit",
+    "description": "Sunrise HTTP header kit for PHP 7.1+ based on PSR-7",
     "license": "MIT",
+    "keywords": [
+        "fenric",
+        "sunrise",
+        "http",
+        "header",
+        "kit",
+        "http-header-kit",
+        "psr-7",
+        "php7",
+        "php8"
+    ],
     "authors": [
         {
             "name": "Anatoly Fenric",
@@ -12,15 +22,15 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0",
         "psr/http-message": "^1.0",
-        "sunrise/http-header": "^1.0",
-        "sunrise/http-header-collection": "^1.0"
+        "sunrise/http-header": "^1.1",
+        "sunrise/http-header-collection": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.5.6",
-        "sunrise/http-message": "1.0.15",
-        "sunrise/uri": "1.0.25"
+        "phpunit/phpunit": "7.5.20|9.5.0",
+        "sunrise/coding-standard": "1.0.0",
+        "sunrise/http-factory": "1.1.0"
     },
     "autoload": {
         "psr-4": {
@@ -29,7 +39,8 @@
     },
     "scripts": {
         "test": [
-            "phpunit --colors=always --coverage-text"
+            "phpunit --colors=always --coverage-text",
+            "phpcs"
         ]
     }
 }
