--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,8 @@
         "fenric",
         "sunrise",
         "http",
-        "header",
-        "kit",
-        "psr-7",
-        "php7",
-        "php8"
+        "message",
+        "header"
     ],
     "authors": [
         {
@@ -21,11 +18,11 @@
         }
     ],
     "require": {
-        "php": "^7.1|^8.0",
+        "php": ">=7.4",
         "sunrise/http-header": "^2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.5.20|9.5.0",
+        "phpunit/phpunit": "~9.5.0",
         "sunrise/coding-standard": "1.0.0",
         "sunrise/uri": "~1.2.0"
     },
