--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
     ],
     "require": {
         "php": ">=7.4",
-        "sunrise/http-header": "^2.1"
+        "sunrise/http-header": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.5.0",
-        "sunrise/coding-standard": "1.0.0",
+        "sunrise/coding-standard": "~1.0.0",
         "sunrise/uri": "~1.2.0"
     },
     "autoload": {
